# kisx

./: .gitignore  Cargo.toml  README.md
chatgpt/: Cargo.toml
chatgpt/src/: main.rs
foundry-contracts/: README.md  foundry.toml  remapping.txt
foundry-contracts/src/: Marketplace.sol  ToyNFT.sol
foundry-contracts/test/: MarketPlace.t.sol  ToyNFT.t.sol
graphql-backend/: .env.example  Cargo.toml  README.md
graphql-backend/crates/orderbook/: Cargo.toml
graphql-backend/migrations/2019-03-06-144033_create_users/: up.sql
graphql-backend/migrations/2022-03-20-045449_assets/: down.sql  up.sql
graphql-backend/migrations/2022-03-20-045449_sets/: down.sql  up.sql
graphql-backend/migrations/2023-05-23-193928_lots/: down.sql  up.sql
graphql-backend/migrations/2023-06-04-212206_prices/: down.sql  up.sql
graphql-backend/src/: error.rs  main.rs  schema.rs
graphql-backend/src/app/: assets.rs  (+7 more)
hardhat-contracts/: README.md  hardhat.config.js  hardhat.config.ts  package.json  tsconfig.json
hardhat-contracts/contracts/: KisxPortal.sol  Marketplace.sol  ToyNFT.sol
hardhat-contracts/scripts/: deploy.ts  deploy_waveportal.js
hardhat-contracts/test/: KisxPortal.ts  Marketplace.ts  ToyNFT.js  ToyNFT.ts
hardhat-example/: package.json
hardhat-example/contracts/: WavePortal.sol
hardhat-example/test/: ToyNFT.ts
nft-skeleton-app/: package.json
svelte-frontend/: package-lock.json  package.json
svelte-frontend/static/: smui-dark.css  smui.css
svelte-waveportal-frontend/: README.md  package.json  rollup.config.js
svelte-waveportal-frontend/src/: App.svelte
(+61 files in other folders)
